--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/cheese.html">Cheese Recipe</a>
+    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <a href="recipes/pasta-vodka.html">Pasta Vodka Recipe</a>
   </body>
 </html>
