--- a/recipes/cheese.html
+++ b/recipes/cheese.html
@@ -8,5 +8,11 @@
   <body>
     <h1>Cheese Recipe</h1>
     <img src="../images/cheese.jpg" />
+    <p>This is a delicious recipe.</p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>Milk</li>
+      <li>Milk</li>
+    </ul>
   </body>
 </html>
