--- a/recipes/pasta-vodka.html
+++ b/recipes/pasta-vodka.html
@@ -8,5 +8,15 @@
   <body>
     <h1>Pasta Vodka Recipe!</h1>
     <img src="../images/Pasta-vodka.jpg" />
+    <p>This is a delicious recipe.</p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>Pasta</li>
+      <li>Vodka</li>
+      <li>Cream</li>
+      <li>Tomatoes</li>
+      <li>Salt</li>
+      <li>Onions</li>
+    </ul>
   </body>
 </html>
