Add steps and turn links to list.

--- a/recipes/cheese.html
+++ b/recipes/cheese.html
@@ -7,12 +7,18 @@
   </head>
   <body>
     <h1>Cheese Recipe</h1>
-    <img src="../images/cheese.jpg" />
+    <img style="border-radius: 40px" src="../images/cheese.jpg" />
     <p>This is a delicious recipe.</p>
     <h3>Ingredients</h3>
     <ul>
       <li>Milk</li>
       <li>Milk</li>
     </ul>
+    <h3>Steps</h3>
+    <ol>
+      <li>Mix cheese and ferment that shit</li>
+      <li>Wait</li>
+      <li>YEA</li>
+    </ol>
   </body>
 </html>
