--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Lasagna Recipe!</h1>
-    <img src="../images/lasagna.jpg" />
+    <img style="border-radius: 4000px 0 4000px 0" src="../images/lasagna.jpg" />
     <p>This is a delicious recipe.</p>
     <h3>Ingredients</h3>
     <ul>
@@ -18,5 +18,11 @@
       <li>Salt</li>
       <li>Onions</li>
     </ul>
+    <h3>Steps</h3>
+    <ol>
+      <li>Make sauce</li>
+      <li>put sauce and pasta together</li>
+      <li>eat</li>
+    </ol>
   </body>
 </html>
