--- a/recipes/pasta-vodka.html
+++ b/recipes/pasta-vodka.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Pasta Vodka Recipe!</h1>
-    <img src="../images/Pasta-vodka.jpg" />
+    <img style="border-radius: 40px" src="../images/Pasta-vodka.jpg" />
     <p>This is a delicious recipe.</p>
     <h3>Ingredients</h3>
     <ul>
@@ -18,5 +18,10 @@
       <li>Salt</li>
       <li>Onions</li>
     </ul>
+    <ol>
+      <li>Make sauce</li>
+      <li>put sauce and pasta together</li>
+      <li>eat</li>
+    </ol>
   </body>
 </html>
